QJSEngine: Allow strings as arguments to throwError()

We need to store them on the JS heap.

Fixes: QTBUG-136797
Change-Id: I8b675a2a5bafcfa49f4bdf38407e8d81b39bc902
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>