tests/auto/qml/qjsengine/tst_qjsengine.cpp
@@ -357,6 +357,7 @@ public:
     Q_INVOKABLE QJSValue throwingCppMethod1();
     Q_INVOKABLE void throwingCppMethod2();
     Q_INVOKABLE QJSValue throwingCppMethod3();
+    Q_INVOKABLE QJSValue throwingCppMethod4();
 
 signals:
     void testSignal();
@@ -5126,6 +5127,14 @@ void tst_QJSEngine::returnError()
     QCOMPARE(result.property("lineNumber").toString(), "1");
     QCOMPARE(result.property("message").toString(), "Something is wrong");
     QVERIFY(!result.property("stack").isUndefined());
+
+    // NB: evaluate() does not return an ErrorObject if the exception is not an ErrorObject.
+    //     This is documented.
+    QStringList exceptionStackTrace;
+    result = engine.evaluate("testCase.throwingCppMethod4()", "foo.js", 1, &exceptionStackTrace);
+    QVERIFY(!exceptionStackTrace.isEmpty());
+    QVERIFY(result.isString());
+    QCOMPARE(result.toString(), "JSValue from string");
 }
 
 void tst_QJSEngine::catchError()
@@ -5157,6 +5166,13 @@ QJSValue tst_QJSEngine::throwingCppMethod3()
     QJSEngine *engine = qjsEngine(this);
     engine->throwError(engine->newErrorObject(QJSValue::EvalError, "Something is wrong"));
     return QJSValue(31);
+}
+
+QJSValue tst_QJSEngine::throwingCppMethod4()
+{
+    QJSEngine *engine = qjsEngine(this);
+    engine->throwError(QJSValue("JSValue from string"));
+    return QJSValue(32);
 }
 
 void tst_QJSEngine::mathMinMax()
